# perry

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PERF_RUN_LOG.md  README.md  TASK.md  TYPE_LOWERING.md  TYPE_LOWERING_GUIDANCE.md  W6_ISSUE_DRAFT.md  run_module_parity.sh  run_parity_tests.sh  wasm_ui_demo.html
crates/perry-api-manifest/: Cargo.toml
crates/perry-api-manifest/src/: emit.rs  entries.rs  lib.rs
crates/perry-api-manifest/tests/: stub_inventory.rs
crates/perry-audio-miniaudio/: Cargo.toml  build.rs
crates/perry-audio-miniaudio/src/: lib.rs
crates/perry-ext-ads/: Cargo.toml
crates/perry-ext-ads/src/: lib.rs
crates/perry-ext-commander/: Cargo.toml
crates/perry-ext-commander/src/: lib.rs
crates/perry-ext-cron/: Cargo.toml
crates/perry-ext-cron/src/: lib.rs
crates/perry-ext-dotenv/: Cargo.toml
crates/perry-ext-dotenv/src/: lib.rs
crates/perry-ext-ethers/: Cargo.toml
crates/perry-ext-ethers/src/: lib.rs
crates/perry-ext-events/: Cargo.toml
crates/perry-ext-events/src/: error_monitor.rs  lib.rs  module_iterators.rs  test_async_shims.rs  tests.rs
crates/perry-ext-fastify/: Cargo.toml
crates/perry-ext-fastify/src/: context.rs  lib.rs  server.rs  upgrade.rs
crates/perry-ext-fetch/: Cargo.toml
crates/perry-ext-fetch/src/: lib.rs  test_async_shims.rs  validation.rs
crates/perry-ext-http/: Cargo.toml
crates/perry-ext-http-server/: Cargo.toml
crates/perry-ext-http-server/src/: handle_dispatch.rs  http2_server.rs  http2_session_settings.rs  https_server.rs  lib.rs  request.rs  response.rs  server.rs  types.rs
crates/perry-ext-http/src/: agent.rs  client_dispatch.rs  client_events.rs  client_request_surface.rs  lib.rs  plain_client.rs  response_headers.rs  tests.rs  tls_client.rs  validation.rs
crates/perry-ext-ioredis/: Cargo.toml
crates/perry-ext-ioredis/src/: lib.rs
crates/perry-ext-jsonwebtoken/: Cargo.toml
crates/perry-ext-net/: Cargo.toml
crates/perry-ext-net/src/: classes.rs  dispatch.rs  lib.rs  lifecycle.rs  option_setters.rs  server_state.rs  test_async_shims.rs  tls.rs
crates/perry-ext-nodemailer/: Cargo.toml
crates/perry-ext-sharp/: Cargo.toml
crates/perry-ext-sharp/src/: lib.rs
crates/perry-ext-slugify/: Cargo.toml
crates/perry-ext-slugify/src/: lib.rs
crates/perry-ext-streams/: Cargo.toml
crates/perry-ext-streams/src/: lib.rs
crates/perry-ext-tursodb/: Cargo.toml
crates/perry-ext-tursodb/src/: lib.rs
crates/perry-ext-uuid/: Cargo.toml
crates/perry-ext-ws/: Cargo.toml
crates/perry-ext-ws/src/: lib.rs
crates/perry-ext-zlib/: Cargo.toml
crates/perry-ext-zlib/src/: lib.rs  stream.rs
crates/perry-ffi/: Cargo.toml
crates/perry-ffi/src/: async_runtime.rs  bigint.rs  buffer.rs  handle.rs  jsvalue.rs  lib.rs
crates/perry-jsruntime/: Cargo.toml
crates/perry-jsruntime/src/: bridge.rs  interop.rs  lib.rs  modules.rs  node_polyfills.js  ops.rs
crates/perry-jsruntime/src/modules/: builtin_stubs.rs
crates/perry-runtime/: Cargo.toml  build.rs
crates/perry-runtime-static/: Cargo.toml
crates/perry-runtime-static/src/: lib.rs
crates/perry-runtime/src/: arena.rs  arkts_callbacks.rs  array.rs  async_context.rs  async_hooks.rs  atomics.rs  bigint.rs  box.rs  buffer.rs  builtins.rs  child_process.rs  closure.rs  cluster.rs  cluster_sched.rs  collection_iter.rs  date.rs  dgram.rs  dns.rs  error.rs  event_pump.rs  event_target.rs  exception.rs  fast_hash.rs  frame.rs  fs.rs  gc.rs  geisterhand_registry.rs  i18n.rs  intl.rs  json.rs  json_tape.rs  jsx.rs  lib.rs  map.rs  math.rs  media_playback.rs  messaging.rs  module_require.rs  native_abi.rs  native_arena.rs  (+57 more)
crates/perry-runtime/src/arena/: block.rs  mod.rs  tests.rs  walk.rs
crates/perry-runtime/src/array/: alloc.rs  concat_reverse.rs  flat_clone.rs  from_concat.rs  generic.rs  header.rs  immutable.rs  indexing.rs  is_array.rs  iter_methods.rs  iter_object.rs  iterator.rs  mod.rs  push_pop.rs  reduce_right.rs  search.rs  sort.rs  species.rs  splice_slice.rs  tests.rs
crates/perry-runtime/src/buffer/: access.rs  dataview.rs  encode.rs  from.rs  header.rs  iter.rs  mod.rs  numeric.rs  query.rs  transcode.rs  u8_codec.rs  validate.rs  view.rs
crates/perry-runtime/src/builtins/: arithmetic.rs  console.rs  formatting.rs  globals.rs  mod.rs  numbers.rs  table.rs
crates/perry-runtime/src/child_process/: fork.rs  mod.rs  reactor.rs  sync_run.rs  v8_serde.rs
crates/perry-runtime/src/closure/: alloc.rs  dispatch.rs  dynamic_props.rs  mod.rs  registry.rs  tests.rs  unbox.rs
crates/perry-runtime/src/fs/: callbacks.rs  cp.rs  dir_glob_watch.rs  dirent.rs  fd_ops.rs  filehandle.rs  mod.rs  open_as_blob.rs  stats.rs  stream.rs  validate.rs
crates/perry-runtime/src/gc/: barrier.rs  copying.rs  cycle.rs  heap_snapshot.rs  layout.rs  malloc.rs  mod.rs  oldgen.rs  policy.rs  roots.rs  telemetry.rs  tests.rs  trace.rs  types.rs  verify.rs
crates/perry-runtime/src/intl/: display_names.rs  duration_format.rs
crates/perry-runtime/src/json/: mod.rs  parse_api.rs  raw_json.rs  replacer.rs  reviver.rs  stringify.rs  stringify_api.rs
crates/perry-runtime/src/node_stream/: async_iterator.rs
crates/perry-runtime/src/node_submodules/: blob.rs  consumers.rs  diagnostics.rs  diagnostics_tail.rs  fs_promises.rs  hono_jsx.rs  mod.rs  stream_promises.rs  tests.rs  timers.rs  trace_events.rs  (+1 more)
crates/perry-stdlib/: Cargo.toml
crates/perry-stdlib-static/: Cargo.toml
crates/perry-stdlib-static/src/: lib.rs
crates/perry-stdlib/src/: async_local_storage.rs  axios.rs  bcrypt.rs  cheerio.rs  commander.rs  cron.rs  crypto.rs  decimal.rs  domain.rs  ethers.rs  events.rs  exponential_backoff.rs  fetch.rs  fetch_blob.rs  http.rs  ioredis.rs  jsonwebtoken.rs  lib.rs  perry_ffi_async.rs  querystring.rs  readline.rs  sqlite.rs  streams.rs  string_decoder.rs  tls.rs  webcrypto.rs  worker_threads.rs  ws.rs  zlib.rs
crates/perry-stdlib/tests/: container_backend_selection.rs  container_capability_tests.rs  container_extra_tests.rs  container_ffi_tests.rs  container_props.rs  container_verification_tests.rs  container_workspace_invariants.rs
(+2665 files in other folders)
