[workspace]
resolver = "2"
members = [
    "crates/perry",
    "crates/perry-parser",
    "crates/perry-types",
    "crates/perry-api-manifest",
    "crates/perry-hir",
    "crates/perry-transform",
    "crates/perry-codegen",
    "crates/perry-dispatch",
    "crates/perry-runtime",
    "crates/perry-ffi",
    "crates/perry-ext-dotenv",
    "crates/perry-ext-nanoid",
    "crates/perry-ext-uuid",
    "crates/perry-ext-slugify",
    "crates/perry-ext-bcrypt",
    "crates/perry-ext-argon2",
    "crates/perry-ext-jsonwebtoken",
    "crates/perry-ext-validator",
    "crates/perry-ext-lru-cache",
    "crates/perry-ext-better-sqlite3",
    "crates/perry-ext-zlib",
    "crates/perry-ext-exponential-backoff",
    "crates/perry-ext-axios",
    "crates/perry-ext-events",
    "crates/perry-ext-decimal",
    "crates/perry-ext-dayjs",
    "crates/perry-ext-moment",
    "crates/perry-ext-cheerio",
    "crates/perry-ext-sharp",
    "crates/perry-ext-ratelimit",
    "crates/perry-ext-commander",
    "crates/perry-ext-ethers",
    "crates/perry-ext-nodemailer",
    "crates/perry-ext-cron",
    "crates/perry-ext-ioredis",
    "crates/perry-ext-pg",
    "crates/perry-ext-mysql2",
    "crates/perry-ext-fetch",
    "crates/perry-ext-mongodb",
    "crates/perry-ext-ws",
    "crates/perry-ext-net",
    "crates/perry-ext-http",
    "crates/perry-ext-streams",
    "crates/perry-ext-fastify",
    "crates/perry-ext-pdf",
    "crates/perry-ext-ads",
    "crates/perry-wasm-host",
    "crates/perry-container-compose",
    "crates/perry-container-e2e",
    "crates/perry-stdlib",
    "crates/perry-diagnostics",
    "crates/perry-ui",
    "crates/perry-ui-model",
    "crates/perry-ui-macos",
    "crates/perry-ui-ios",
    "crates/perry-ui-visionos",
    "crates/perry-ui-android",
    "crates/perry-audio-miniaudio",
    "crates/perry-ui-gtk4",
    "crates/perry-ui-windows",
    "crates/perry-ui-windows-winui",
    "crates/perry-ui-watchos",
    "crates/perry-ui-tvos",
    "crates/perry-ui-geisterhand",
    "crates/perry-codegen-js",
    "crates/perry-codegen-swiftui",
    "crates/perry-codegen-arkts",
    "crates/perry-codegen-glance",
    "crates/perry-codegen-wear-tiles",
    "crates/perry-codegen-wasm",
    "crates/perry-ui-test",
    "crates/perry-ui-testkit",
    "crates/perry-doc-tests",
    "crates/perry-updater",
    "crates/perry-runtime-static",
    "crates/perry-stdlib-static",
    "docs/examples/_fixtures/native-libraries/my-bindings",
]
# Only build platform-independent crates by default.
# Platform-specific UI crates (perry-ui-macos, perry-ui-ios, etc.) must be built
# explicitly with -p on their target platform.
default-members = [
    "crates/perry",
    "crates/perry-parser",
    "crates/perry-types",
    "crates/perry-api-manifest",
    "crates/perry-hir",
    "crates/perry-transform",
    "crates/perry-codegen",
    "crates/perry-dispatch",
    "crates/perry-runtime",
    "crates/perry-ffi",
    "crates/perry-ext-dotenv",
    "crates/perry-ext-nanoid",
    "crates/perry-ext-uuid",
    "crates/perry-ext-slugify",
    "crates/perry-ext-bcrypt",
    "crates/perry-ext-argon2",
    "crates/perry-ext-jsonwebtoken",
    "crates/perry-ext-validator",
    "crates/perry-ext-lru-cache",
    "crates/perry-ext-better-sqlite3",
    "crates/perry-ext-zlib",
    "crates/perry-ext-exponential-backoff",
    "crates/perry-ext-axios",
    "crates/perry-ext-events",
    "crates/perry-ext-decimal",
    "crates/perry-ext-dayjs",
    "crates/perry-ext-moment",
    "crates/perry-ext-cheerio",
    "crates/perry-ext-sharp",
    "crates/perry-ext-ratelimit",
    "crates/perry-ext-commander",
    "crates/perry-ext-ethers",
    "crates/perry-ext-nodemailer",
    "crates/perry-ext-cron",
    "crates/perry-ext-ioredis",
    "crates/perry-ext-pg",
    "crates/perry-ext-mysql2",
    "crates/perry-ext-fetch",
    "crates/perry-ext-mongodb",
    "crates/perry-ext-ws",
    "crates/perry-ext-net",
    "crates/perry-ext-http",
    "crates/perry-ext-streams",
    "crates/perry-ext-fastify",
    "crates/perry-ext-pdf",
    "crates/perry-ext-ads",
    "crates/perry-wasm-host",
    "crates/perry-stdlib",
    "crates/perry-diagnostics",
    "crates/perry-ui",
    "crates/perry-codegen-js",
    "crates/perry-codegen-swiftui",
    "crates/perry-codegen-arkts",
    "crates/perry-codegen-glance",
    "crates/perry-codegen-wear-tiles",
    "crates/perry-codegen-wasm",
    "crates/perry-updater",
    "crates/perry-container-compose",
]

# Aggressive release optimizations for small, fast binaries
[profile.release]
lto = "thin"          # Thin LTO for faster builds and fewer duplicate symbols
codegen-units = 1     # Better optimization, slower compile
panic = "unwind"      # Allow catch_unwind for graceful error recovery
strip = true          # Strip symbols automatically
opt-level = 3         # Maximum optimization

# For the runtime/stdlib static libraries
[profile.release.package.perry-runtime]
opt-level = 3
strip = false

# UI crates must NOT strip — they export #[no_mangle] extern "C" symbols
[profile.release.package.perry-ui-macos]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-gtk4]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-windows]
strip = false
codegen-units = 16

# WinUI scaffold (#4680): re-exports perry-ui-windows; the staticlib bundles
# its #[no_mangle] extern "C" symbols, so it must not be stripped either.
[profile.release.package.perry-ui-windows-winui]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-geisterhand]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-ios]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-visionos]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-tvos]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-android]
strip = false
codegen-units = 16

[profile.release.package.perry-ui-watchos]
strip = false
codegen-units = 16

[profile.release.package.perry-stdlib]
opt-level = "s"       # Optimize for size in stdlib

# perry-ext-events exports #[no_mangle] EventEmitter FFI symbols
# (js_event_emitter_*) that generated native code calls directly when a program
# constructs a native EventEmitter by name (e.g. eventemitter3's default
# export). It is a non-tokio wrapper, so the auto-optimize linker uses its
# prebuilt standalone staticlib rather than rebuilding it alongside a crate that
# references those symbols. Thin-LTO then internalizes and drops the whole C API
# from that staticlib, so the program fails to link with undefined
# _js_event_emitter_* symbols (#5140). Mirror the UI crates' settings (which
# export #[no_mangle] extern "C" symbols for the same reason): more codegen
# units + no strip keeps the exported C API in the staticlib.
[profile.release.package.perry-ext-events]
strip = false
codegen-units = 16

# Staticlib wrapper crates (#5422). perry-runtime / perry-stdlib are now
# rlib-only; these wrappers re-export their #[no_mangle] C API into
# libperry_runtime.a / libperry_stdlib.a. Thin-LTO would otherwise internalize
# and drop the whole exported C surface (same failure as perry-ext-events,
# #5140), so mirror its settings: more codegen units + no strip keep the C API
# in the archive.
[profile.release.package.perry-runtime-static]
strip = false
codegen-units = 16
[profile.release.package.perry-stdlib-static]
strip = false
codegen-units = 16

# Fast developer profile (#5422). Optimized enough for realistic local runs but
# without the distribution-grade settings that dominate compile time, so the
# edit/build loop stays short. Intended local loop:
#   cargo check -p perry                       # fastest correctness feedback
#   cargo build --profile perry-dev -p perry   # optimized local development
[profile.perry-dev]
inherits = "release"
lto = false
codegen-units = 16
incremental = true
strip = false
opt-level = 1

# Official distribution profile (#5422). The explicit, named home for the
# release-grade optimization Perry ships. Mirrors [profile.release] exactly —
# including every per-package override below — so official artifacts stay
# equivalent while being selected via `--profile dist`. Keep these blocks in
# sync with their [profile.release.*] counterparts above.
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = true
opt-level = 3

[profile.dist.package.perry-runtime]
opt-level = 3
strip = false
[profile.dist.package.perry-ui-macos]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-gtk4]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-windows]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-windows-winui]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-geisterhand]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-ios]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-visionos]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-tvos]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-android]
strip = false
codegen-units = 16
[profile.dist.package.perry-ui-watchos]
strip = false
codegen-units = 16
[profile.dist.package.perry-stdlib]
opt-level = "s"
[profile.dist.package.perry-ext-events]
strip = false
codegen-units = 16
[profile.dist.package.perry-runtime-static]
strip = false
codegen-units = 16
[profile.dist.package.perry-stdlib-static]
strip = false
codegen-units = 16

[workspace.package]
version = "0.5.1200"
edition = "2021"
license = "MIT"
repository = "https://github.com/PerryTS/perry"

[workspace.dependencies]
# SWC for TypeScript parsing
swc_ecma_parser = "32.0"
swc_ecma_ast = "19.0"
swc_common = "18.0"

# Runtime dependencies
# bdwgc for garbage collection (Boehm GC)
# We'll use libgc-sys or similar

# Utilities
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
stacker = "0.1.24"

# JWT — jsonwebtoken 10.x requires explicitly selecting a crypto backend
# (`rust_crypto` or `aws_lc_rs`) and opting into PEM parsing for
# `from_ec_pem` / `from_rsa_pem`. `rust_crypto` keeps the deps tree small
# relative to `aws_lc_rs`; users who need FIPS validation can fork.
jsonwebtoken = { version = "10.4", default-features = false, features = ["rust_crypto", "use_pem"] }

# Terminal UI
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"

# File system
walkdir = "2.4"
notify = "6.1"

# Diff generation
similar = "2.4"

# HTTP / WebSocket (for publish command)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
dirs = "6"

# .env file loading (for publish command)
dotenvy = "0.15"

# Archive creation (for publish command)
flate2 = "1"
tar = "0.4"
base64 = "0.22"
zip = "2"
# zstd for transparent decompression of the npm-shipped `*.a.zst` archives.
# Statically vendored (no system libzstd dependency on the user's machine).
zstd = "0.13"

# Internal crates
perry-parser = { path = "crates/perry-parser" }
perry-types = { path = "crates/perry-types" }
perry-api-manifest = { path = "crates/perry-api-manifest" }
perry-hir = { path = "crates/perry-hir" }
perry-transform = { path = "crates/perry-transform" }
perry-codegen = { path = "crates/perry-codegen" }
perry-dispatch = { path = "crates/perry-dispatch" }
# #1112: `perry-ffi` is published to crates.io so npm-packaged native
# wrappers (per `perry.nativeLibrary` in package.json) can resolve it
# without a sibling Perry checkout. perry-ffi's only direct reference
# to perry-runtime is a `#[cfg(test)]` layout-assertion test which
# moves perry-runtime to a path-only `[dev-dependencies]` entry —
# `cargo publish -p perry-ffi` therefore strips it from the published
# Cargo.toml, and external users never need perry-runtime in their
# Cargo graph (Perry's compiler driver links `libperry_runtime.a`
# into the final binary directly).
# `default-features = false` so dependency EDGES (perry-stdlib, ext crates, the
# perry binary) don't force perry-runtime's heavy default features (`full`,
# `regex-engine`, `temporal`, `url-engine`, `string-normalize`, `intl-segmenter`)
# back on. The auto-optimize build selects perry-runtime with
# `--no-default-features` and re-adds only what a given program needs (see
# optimized_libs.rs), so an edge requesting defaults would defeat that (cargo
# unifies features additively). A plain `cargo build`/`cargo test --workspace`
# still builds perry-runtime as a *selected* package, so its own `default`
# applies — tests and the shipped prebuilt keep every engine. This mirrors why
# `wasm-host` must stay out of `default`, generalized to all heavy features.
perry-runtime = { path = "crates/perry-runtime", version = "0.5.1011", default-features = false }
perry-ffi = { path = "crates/perry-ffi", version = "0.5.1011" }
perry-ext-dotenv = { path = "crates/perry-ext-dotenv" }
perry-ext-nanoid = { path = "crates/perry-ext-nanoid" }
perry-ext-uuid = { path = "crates/perry-ext-uuid" }
perry-ext-slugify = { path = "crates/perry-ext-slugify" }
perry-ext-bcrypt = { path = "crates/perry-ext-bcrypt" }
perry-ext-argon2 = { path = "crates/perry-ext-argon2" }
perry-ext-jsonwebtoken = { path = "crates/perry-ext-jsonwebtoken" }
perry-ext-validator = { path = "crates/perry-ext-validator" }
perry-ext-lru-cache = { path = "crates/perry-ext-lru-cache" }
perry-ext-better-sqlite3 = { path = "crates/perry-ext-better-sqlite3" }
perry-ext-zlib = { path = "crates/perry-ext-zlib" }
perry-ext-exponential-backoff = { path = "crates/perry-ext-exponential-backoff" }
perry-ext-axios = { path = "crates/perry-ext-axios" }
perry-ext-events = { path = "crates/perry-ext-events" }
perry-ext-decimal = { path = "crates/perry-ext-decimal" }
perry-ext-dayjs = { path = "crates/perry-ext-dayjs" }
perry-ext-moment = { path = "crates/perry-ext-moment" }
perry-ext-cheerio = { path = "crates/perry-ext-cheerio" }
perry-ext-sharp = { path = "crates/perry-ext-sharp" }
perry-ext-ratelimit = { path = "crates/perry-ext-ratelimit" }
perry-ext-commander = { path = "crates/perry-ext-commander" }
perry-ext-ethers = { path = "crates/perry-ext-ethers" }
perry-ext-nodemailer = { path = "crates/perry-ext-nodemailer" }
perry-ext-cron = { path = "crates/perry-ext-cron" }
perry-ext-ioredis = { path = "crates/perry-ext-ioredis" }
perry-ext-pg = { path = "crates/perry-ext-pg" }
perry-ext-mysql2 = { path = "crates/perry-ext-mysql2" }
perry-ext-fetch = { path = "crates/perry-ext-fetch" }
perry-ext-mongodb = { path = "crates/perry-ext-mongodb" }
perry-ext-ws = { path = "crates/perry-ext-ws" }
perry-ext-net = { path = "crates/perry-ext-net" }
perry-ext-http = { path = "crates/perry-ext-http" }
perry-ext-streams = { path = "crates/perry-ext-streams" }
perry-ext-fastify = { path = "crates/perry-ext-fastify" }
perry-ext-pdf = { path = "crates/perry-ext-pdf" }
perry-ext-ads = { path = "crates/perry-ext-ads" }
perry-stdlib = { path = "crates/perry-stdlib" }
perry-diagnostics = { path = "crates/perry-diagnostics" }
perry-ui-model = { path = "crates/perry-ui-model" }
perry-wasm-host = { path = "crates/perry-wasm-host" }
perry-codegen-js = { path = "crates/perry-codegen-js" }
perry-codegen-swiftui = { path = "crates/perry-codegen-swiftui" }
perry-codegen-arkts = { path = "crates/perry-codegen-arkts" }
perry-codegen-glance = { path = "crates/perry-codegen-glance" }
perry-codegen-wear-tiles = { path = "crates/perry-codegen-wear-tiles" }
perry-codegen-wasm = { path = "crates/perry-codegen-wasm" }
perry-ui-testkit = { path = "crates/perry-ui-testkit" }
perry-audio-miniaudio = { path = "crates/perry-audio-miniaudio" }
perry-updater = { path = "crates/perry-updater" }
