[package]
name = "perry-ext-fetch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native bindings for npm `node-fetch` — uses only `perry-ffi`. HTTP via reqwest, async via spawn_blocking + JsPromise. Web Fetch API surface (Response / Headers / Blob / Request)."

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
perry-ffi.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false }
tokio = { workspace = true }
serde_json = "1"
lazy_static = "1.5"

[dev-dependencies]
perry-ffi = { workspace = true, features = ["runtime-link"] }
perry-runtime = { workspace = true, features = ["external-fetch-symbols"] }
